# aws-cost-optimizer

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/awsco/: __init__.py  aws.py  cli.py  models.py  pricing.py  scanner.py  server.py  storage.py
backend/awsco/collectors/: __init__.py  ce_anomalies.py  ce_ri_recommendations.py  ce_savings_plans.py  cloudwatch_logs_no_retention.py  compute_optimizer_rightsizing.py  dynamodb_idle.py  ebs_gp2_to_gp3.py  ebs_snapshots_old.py  ebs_unattached.py  ec2_idle.py  ec2_stopped_billed_ebs.py  eip_unused.py  elasticache_idle.py  lb_unused.py  nat_idle.py  rds_idle.py  rds_snapshots_old.py  redshift_idle.py
backend/awsco/demo/: __init__.py  fixtures.py
backend/awsco/static/: 404.html  index.html  index.txt
backend/awsco/static/404/: index.html
backend/awsco/static/_next/static/chunks/: 109f1dee-7f2973a8a456a3fe.js  117-96e48e2dc4a3ceb0.js  251-8297c366f0ec5eb3.js  694-b83fb6acfa266a6c.js  main-app-e930482a508a1167.js  main-e4f27557e6f740f0.js
backend/awsco/static/_next/static/chunks/app/: layout-01c116391c1acdc3.js  page-5097331def309e22.js  page-f68711a79bca0dad.js
backend/awsco/static/_next/static/css/: a2324571b098c96b.css  d1bfbda446d29fe1.css
backend/tests/: test_collectors.py  test_demo.py  test_finops.py  test_models.py  test_server.py  test_storage.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CategoryBadge.tsx  ConnectModal.tsx  CopyButton.tsx  DemoBanner.tsx  EmptyState.tsx  FindingsTable.tsx  (+7 more)
infra/: iam-policy.json
(+5 files in other folders)
